--- a/index.html
+++ b/index.html
@@ -54,21 +54,9 @@
               </div>
             </nav>
     </header>
-    <div class="container">
-        <h1 >Perfumes</h1>
-        <div class="row">
-          <div id="vip" class="col-md-4">
-            <a href="#" class="btn btn-primary">Agregar al carro</a>
-          </div>
-          <div id="amor" class="col-md-4"></div>
-          <div id="terra" class="col-md-4"></div>
-          <div id="mywey" class="col-md-4"></div>
-          <div id="si" class="col-md-4"></div>
-          <div id="valentino" class="col-md-4"></div>
-        </div>
-      </div>
+    <div id="contenedor-productos">Productos</div>
     <script src="bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/js/bootstrap.js"></script>
-    <script src= "./DomElements.js"></script>
-    <script src= "./Arrays.js"></script>
+    <script src= "./Datos.js"></script>
+    <script src= "./Main.js"></script>
   </body>
 </html>
